RESOLVED FIXED111689
[WK2] SandboxExtension::createHandle raises an uncaught Objective-C exception if path is empty
https://bugs.webkit.org/show_bug.cgi?id=111689
Summary [WK2] SandboxExtension::createHandle raises an uncaught Objective-C exception...
Alexey Proskuryakov
Reported 2013-03-06 23:14:01 PST
Calling fileSystemRepresentation on an empty NSString results in an exception.
Attachments
proposed fix (1.76 KB, patch)
2013-03-06 23:17 PST, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2013-03-06 23:17:44 PST
Created attachment 191930 [details] proposed fix
Filip Pizlo
Comment 2 2013-03-06 23:24:11 PST
Actually, am I allowed to review these patches? I guess I'm not a WK2 reviewer. Anyways, LGTM.
Filip Pizlo
Comment 3 2013-03-06 23:24:34 PST
Comment on attachment 191930 [details] proposed fix Resetting r? because I'm not a WK2 reviewer.
Filip Pizlo
Comment 4 2013-03-06 23:25:06 PST
Comment on attachment 191930 [details] proposed fix View in context: https://bugs.webkit.org/attachment.cgi?id=191930&action=review > Source/WebKit2/ChangeLog:9 > + Use a fucntion from WebCore platform layer instead of Foundation one equivalent. s/fucntion/function
Alexey Proskuryakov
Comment 5 2013-03-06 23:29:01 PST
Ugh, I already committed before you undid the review. Probably not worth rolling out, as this implicitly has "WebKit2 owner approval".
Alexey Proskuryakov
Comment 6 2013-03-06 23:29:40 PST
Note You need to log in before you can comment on or make changes to this bug.