        SandboxExtension::createHandle raises an uncaught Objective-C exception if path is empty         https://bugs.webkit.org/show_bug.cgi?id=111689

Reviewed by Filip Pizlo.

        * Shared/mac/SandboxExtensionMac.mm: (WebKit::SandboxExtension::createHandle):
        Use a function from WebCore platform layer instead of Foundation one equivalent.
        We already do this elsewhere in this file.



Canonical link: https://commits.webkit.org/130046@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145042 268f45cc-cd09-0410-ab3c-d52691b4dbfc